import java.util.ArrayList;

public class Collection
{
    public static ArrayList<Media> movies;

    //For series. Not done!
    //public static ArrayList<Media> series;
}
